--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ node_modules/
 dist/
 *.parquet
 .vscode/
+TBI/.venv/
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
