--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,10 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/Thumbs.db": true
+        "**/Thumbs.db": true,
+        "TBI/.venv": true
     },
-    "hide-files.files": []
+    "hide-files.files": [
+        "TBI/.venv"
+    ]
 }
