--- a/TBI/src/settings.json
+++ b/TBI/src/settings.json
@@ -1,1 +1,19 @@
-{"default_data_var_name":"data","default_limit":"1","default_sql_font_size":"12","default_sql_query":"select * \nfrom data \nlimit 1000","default_sql_font":"Courier","sql_keywords":"['ELSE', 'LIMIT', 'CASE', 'SELECT', 'OR', 'FROM', 'GROUP BY', 'OFFSET', 'ORDER BY', 'CREATE', 'INNER JOIN', 'IN', 'HAVING', 'DISTINCT', 'NULL', 'ON', 'JOIN', 'WHERE', 'TABLE', 'LEFT JOIN', 'THEN', 'RIGHT JOIN', 'AND', 'LIKE', 'END', 'BETWEEN', 'NOT', 'AS', 'IS', 'WHEN']","result_pagination_rows_per_page":"1000","save_file_history":"True","settings_file":"d:\\code\\parquet-viewer\\TBI\\src\\settings.json","recents_file":"d:\\code\\parquet-viewer\\TBI\\src\\history\\recents.json"}
+{
+    "default_data_var_name": "table",
+    "default_limit": 1000,
+    "default_sql_font_size": 13,
+    "default_sql_query": "SELECT * \nFROM $(default_data_var_name) \nLIMIT $(default_limit)",
+    "default_sql_font": "Courier",
+    "sql_keywords": [
+        "SELECT", "FROM", "WHERE", "GROUP BY", "ORDER BY", 
+        "JOIN", "LEFT JOIN", "RIGHT JOIN", "INNER JOIN", "ON", 
+        "AS", "DISTINCT", "AND", "OR", "NOT", "IN", 
+        "LIKE", "NULL", "IS", "BETWEEN", "HAVING", "CASE", 
+        "WHEN", "THEN", "ELSE", "END", "LIMIT", "OFFSET", "TABLE", "CREATE"
+    ],
+    "result_pagination_rows_per_page": 1000,
+    "save_file_history": true
+    }
+
+
+
