--- a/TBI/src/settings.json
+++ b/TBI/src/settings.json
@@ -1,19 +1,1 @@
-{
-    "default_data_var_name": "table",
-    "default_limit": 1000,
-    "default_sql_font_size": 13,
-    "default_sql_query": "SELECT * \nFROM $(default_data_var_name) \nLIMIT $(default_limit)",
-    "default_sql_font": "Courier",
-    "sql_keywords": [
-        "SELECT", "FROM", "WHERE", "GROUP BY", "ORDER BY", 
-        "JOIN", "LEFT JOIN", "RIGHT JOIN", "INNER JOIN", "ON", 
-        "AS", "DISTINCT", "AND", "OR", "NOT", "IN", 
-        "LIKE", "NULL", "IS", "BETWEEN", "HAVING", "CASE", 
-        "WHEN", "THEN", "ELSE", "END", "LIMIT", "OFFSET", "TABLE", "CREATE"
-    ],
-    "result_pagination_rows_per_page": 1000,
-    "save_file_history": true
-    }
-
-
-
+{"default_data_var_name":"data","default_limit":"1000","default_sql_font_size":"10","default_sql_query":"SELECT * \nFROM $(default_data_var_name) \nLIMIT $(default_limit)","default_sql_font":"Courier","sql_keywords":["DISTINCT","CREATE","GROUP BY","LIKE","SELECT","OFFSET","BETWEEN","THEN","LIMIT","ORDER BY","LEFT JOIN","WHERE","NOT","OR","RIGHT JOIN","HAVING","AS","WHEN","IS","ELSE","ON","IN","FROM","INNER JOIN","NULL","CASE","JOIN","TABLE","END","AND"],"result_pagination_rows_per_page":"1000","save_file_history":"True","settings_file":"d:\\code\\parquet-viewer\\TBI\\src\\settings.json","recents_file":"d:\\code\\parquet-viewer\\TBI\\src\\history\\recents.json"}
