--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ dist/
 *.parquet
 .vscode/
 .venv/
+.vscode/
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
