--- a/src/settings/settings.json
+++ b/src/settings/settings.json
@@ -10,6 +10,6 @@
     "result_pagination_rows_per_page":"500",
     "save_file_history":"true",
     "max_rows": "1000", 
-    "settings_file":"src\\settings.json",
+    "settings_file":"src\\settings\\settings.json",
     "recents_file":"src\\history\\recents.json"
 }
