--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist/
 .vscode/
 .venv/
 .vscode/
+build/
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
