--- a/src/settings/settings.json
+++ b/src/settings/settings.json
@@ -1,1 +1,17 @@
-{"default_data_var_name":"data","default_limit":"500","default_sql_font_size":"10","default_sql_query":"SELECT * \nFROM $(default_data_var_name) \nLIMIT $(default_limit)","default_sql_font":"Courier","sql_keywords":["TABLE","ORDER BY","HAVING","LEFT JOIN","RIGHT JOIN","AND","GROUP BY","END","IN","LIMIT","SELECT","ELSE","JOIN","ON","OR","IS","DISTINCT","CASE","NOT","AS","FROM","THEN","NULL","WHERE","WHEN","LIKE","INNER JOIN","CREATE","BETWEEN","OFFSET"],"result_pagination_rows_per_page":"500","save_file_history":"true","max_rows":"1000"}
+{
+    "default_data_var_name":"data",
+    "default_limit":"500",
+    "default_sql_font_size":"10",
+    "default_sql_query":"SELECT * \nFROM $(default_data_var_name) \nLIMIT $(default_limit)",
+    "default_sql_font":"Courier",
+    "sql_keywords":["FROM","BETWEEN","DISTINCT","ORDER BY","AS","NULL","CASE","GROUP BY","ON","WHERE",
+                    "WHEN","NOT","OFFSET","INNER JOIN","SELECT","TABLE","JOIN","LIMIT","OR","THEN","RIGHT JOIN",
+                    "END","LEFT JOIN","ELSE","AND","HAVING","IS","IN","CREATE","LIKE"],
+    "result_pagination_rows_per_page":"500",
+    "save_file_history":"true",
+    "max_rows": "1000",
+    "colour_browseButton": "#8AFBF6",
+    "colour_sqlEdit": "#D6EBAF",
+    "colour_executeButton": "yellow",
+    "colour_resultTable": "#9FF2F9"
+}
