--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ dist/
 .venv/
 .vscode/
 build/
+__pycache__/
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
