--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
-[tool.poetry]
+[project]
 name = "ParVu"
-version = "0.0.1"
-description = "Simple app for viewing Parquet files"
-authors = ["Aziz Nadirov <aziznadirov@yahoo.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.8"
-pyqt5 = "*"
-pandas = "*"
-duckdb = "*"
-
-[tool.poetry.dev-dependencies]
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+version = "0.2.0"
+description = "ParVu - Parquet Viewer"
+readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+    "annotated-types>=0.7.0",
+    "duckdb>=1.4.3",
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.3",
+    "pydantic>=2.12.5",
+    "pyqt6>=6.6.0",
+    "python-dateutil>=2.9.0.post0",
+    "loguru>=0.7.0",
+    "pyarrow>=15.0.0",
+]
