--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,68 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+
+# PyInstaller
+*.spec~
+*.manifest
+
+# Build artifacts
+build/
+dist/
+*.deb
+*.rpm
+*.zip
+*.tar.gz
+*.exe
+*.dmg
+*.app
+*.AppImage
+ParVu-*-deb/
+parvu_installer.iss
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
-node_modules/
-dist/
+
+# Test data
 *.parquet
-.vscode/
-.venv/
-.vscode/
-build/
-__pycache__/
+
+# UV lock
+uv.lock
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# User data
+.ParVu/
+
+# Node modules (if any)
+node_modules/
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
