--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ dependencies = [
     "loguru>=0.7.0",
     "pyarrow>=15.0.0",
 ]
+
+[project.optional-dependencies]
+build = [
+    "pyinstaller>=6.11.1",
+]
