feat: added crash reported

--- a/src/settings/default_settings.json
+++ b/src/settings/default_settings.json
@@ -12,6 +12,15 @@
     "result_pagination_rows_per_page":"500",
     "save_file_history":"true",
     "max_rows": "1000",
+    "current_theme": "ParVu Light",
+    "current_language": "en",
+    "enable_large_dataset_warning": true,
+    "warning_criteria": "rows",
+    "warning_threshold_rows": 1000000,
+    "warning_threshold_cells": 10000000,
+    "warning_threshold_filesize_mb": 100,
+    "bug_report_email": "parvu.bugs@gmail.com",
+    "enable_crash_reporting": true,
     "colour_browseButton": "#8AFBF6",
     "colour_sqlEdit": "#D6EBAF",
     "colour_executeButton": "yellow",
